# lingbase

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  pytest.ini  run.sh  前设计文档.md  架构设计文档_v2.0.md
config/: deploy.toml  environment.toml
deploy/: lingbase.service
docs/: gguf-quantization.md  rknn3-backend-design.md  架构设计文档.md  部署设计文档.md
lib/: README.md  aarch64  x86_64
lib/aarch64-raw/: libggml-base.so.0.11.1  libllama-common.so.0  libllama.so.0  libllama.so.0.0.9174  libmtmd.so.0  libmtmd.so.0.0.9174  llama-batched-bench  llama-bench  llama-cli  llama-completion  llama-debug-template-parser  llama-fit-params  llama-gguf-split  llama-imatrix  llama-mtmd-cli  llama-mtmd-debug  llama-perplexity  llama-quantize  llama-results  llama-template-analysis  llama-tokenize  llama-tts
lib/aarch64-rk-cpu/: libggml-base.so.0.11.1  (+3 more)
lib/aarch64-rknn/: Cargo.toml  README.md  build.rs
lib/aarch64-rknn/docs/: 00_Rockchip_RK182X_ReleaseNote_RKNN3_SDK_V1.0.0_CN.md  04_Rockchip_RKNPU3_API_Reference_RKNNRT3_V1.0.0_CN.md  04_Rockchip_RKNPU3_API_Reference_RKNNRT3_V1.0.0_EN.md  05_Rockchip_User_Guide_RKNN3_Toolkit_Lite_V1.0.0_CN.md
lib/aarch64-rknn/examples/: rknn3-cli.rs
lib/aarch64-rknn/lib/rknn/: README.md
lib/aarch64-rknn/lib/rknn/include/: custom_ops.h  rknn_ppocr.h  rknncstop.h
lib/aarch64-rknn/lib/rknn3/include/: float16.h
lib/aarch64-rknn/src/: lib.rs  prelude.rs
lib/aarch64-rknn/src/ffi/: raw.rs
scripts/: remote-deploy.sh  run.sh  test-lingbase.sh
src/: error.rs  lib.rs  main.rs
tests/: conftest.py  report.py  run_tests.sh  test_api.py  test_chat.py
(+49 files in other folders)
