[package]
name = "lingbase"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
description = "Edge LLM Inference Service"

[lib]
name = "lingbase"
path = "src/lib.rs"

[[bin]]
name = "lingbase"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
thiserror = "2.0"
anyhow = "1.0"
async-trait = "0.1"
libc = "0.2"
once_cell = "1.20"
futures = "0.3"
tokio-stream = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
deadpool = { version = "0.13", optional = true }
rknn3-sys = { path = "lib/rknn3-sys", optional = true }

[build-dependencies]
cmake = "0.1"
cc = "1.0"

[features]
default = []
cuda = []
rkllm = []
rknn3 = ["deadpool", "rknn3-sys"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1