[package]
name = "aarch64-rknn"
version = "0.1.0"
edition = "2021"
description = "Safe Rust bindings for Rockchip RKNN Runtime API"
license = "MIT"

[build-dependencies]
bindgen = "0.70"

[dependencies]
thiserror = "2.0"
tracing = "0.1"
shimmytok = "0.7.0"

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }
